Aplica mudanças do AG da etapa1 nas etapas 2 e 3
- Deduplicação da população inicial com HashSet
- Seleção de pais sem reposição (candidatos.remove)
- Random criado internamente em AG, Mutacao e Selecao
- Atualiza CSVs com resultados do novo algoritmo