@@ -5,9 +5,7 @@ import cripto.operadores.Mutacao;
 import cripto.operadores.Reinsercao;
 import cripto.operadores.Selecao;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 
 /** Algoritmo Genetico parametrizado por uma {@link Config} (parametros por instancia). */
 public class AG {
@@ -27,68 +25,89 @@ public class AG {
         }
     }
 
-    public static Resultado executar(Problema problema, Config cfg, Random rnd) {
-        // populacao inicial aleatoria
+    public static Resultado executar(Problema problema, Config cfg) {
+        Random rnd = new Random();
+
         List<Individuo> pop = new ArrayList<>(cfg.pop);
-        for (int i = 0; i < cfg.pop; i++) {
+        Set<String> genesExistentes = new HashSet<>();
+
+        while(pop.size() < cfg.pop){
             Individuo ind = Individuo.aleatorio(rnd);
+
+            String assinatura = Arrays.toString(ind.genes);
+
+            if(!genesExistentes.contains(assinatura)){
+                genesExistentes.add(assinatura);
+                pop.add(ind);
+            }
+        }
+
+        for (Individuo ind : pop) {
             ind.avaliar(problema);
-            pop.add(ind);
         }
 
         Individuo melhor = melhorDe(pop);
-        if (melhor.fitness == 0) {
-            return new Resultado(true, 0, 0, melhor.genes.clone());
-        }
 
-        for (int g = 1; g <= cfg.geracoes; g++) {
+        for (int g = 1; g <= cfg.geracoes; g++){
+
             List<Individuo> filhos = new ArrayList<>(cfg.pop);
-            while (filhos.size() < cfg.pop) {
-                Individuo p1 = Selecao.selecionar(pop, cfg, rnd);
-                Individuo p2 = Selecao.selecionar(pop, cfg, rnd);
+            List<Individuo> candidatos = new ArrayList<>(pop);
 
-                Individuo f1;
-                Individuo f2;
-                if (rnd.nextDouble() < cfg.taxaCrossover()) {
-                    Individuo[] f = Crossover.cruzar(p1, p2, cfg);
-                    f1 = f[0];
-                    f2 = f[1];
-                } else {
-                    f1 = p1.copia();
-                    f2 = p2.copia();
-                }
+            // alerta de la ele abaixo:
+            long quantidadeDePais = Math.round((cfg.taxaCrossover() *  cfg.pop));
+            if((quantidadeDePais % 2) != 0) quantidadeDePais += 1;
+            long quantidadeDeReproducoes = quantidadeDePais/2;
 
-                if (rnd.nextDouble() < cfg.taxaMutacao()) {
-                    Mutacao.mutacaoPermutacao(f1, rnd);
-                }
-                if (rnd.nextDouble() < cfg.taxaMutacao()) {
-                    Mutacao.mutacaoPermutacao(f2, rnd);
-                }
-
-                f1.avaliar(problema);
-                filhos.add(f1);
-                if (filhos.size() < cfg.pop) {
-                    f2.avaliar(problema);
-                    filhos.add(f2);
+            // caso de beirada (apenas para testes onde cruzamento nao ocorre)
+            // (mas ai eu acho que nao eh AG...)
+            if(quantidadeDeReproducoes == 0){
+                filhos.addAll(pop);
+                for (Individuo f : filhos){
+                    if(rnd.nextDouble() <= cfg.taxaMutacao()){
+                        Mutacao.mutacaoPermutacao(f);
+                    }
                 }
             }
 
-            pop = Reinsercao.reinserir(pop, filhos, cfg);
+            for(int i = 0; i < quantidadeDeReproducoes; ++i) {
+                Individuo pai1 = Selecao.selecionar(candidatos, cfg);
+                candidatos.remove(pai1);
+                Individuo pai2 = Selecao.selecionar(candidatos, cfg);
+                candidatos.remove(pai2);
 
+                Individuo[] fis = Crossover.cruzar(pai1, pai2, cfg);
+
+                if(rnd.nextDouble() <= cfg.taxaMutacao()){
+                    Mutacao.mutacaoPermutacao(fis[0]);
+                }
+
+                if(rnd.nextDouble() <= cfg.taxaMutacao()) {
+                    Mutacao.mutacaoPermutacao(fis[1]);
+                }
+
+                fis[0].avaliar(problema);
+                fis[1].avaliar(problema);
+                filhos.add(fis[0]);
+                filhos.add(fis[1]);
+
+            }
+
+            pop = Reinsercao.reinserir(pop, filhos, cfg);
             Individuo melhorGeracao = melhorDe(pop);
             if (melhorGeracao.fitness < melhor.fitness) {
                 melhor = melhorGeracao;
             }
+
             if (melhor.fitness == 0) {
                 return new Resultado(true, g, 0, melhor.genes.clone());
             }
-        }
 
+        }
         return new Resultado(false, cfg.geracoes, melhor.fitness, melhor.genes.clone());
     }
 
     private static Individuo melhorDe(List<Individuo> pop) {
-        Individuo m = pop.get(0);
+        Individuo m = pop.getFirst();
         for (Individuo ind : pop) {
             if (ind.fitness < m.fitness) {
                 m = ind;
